[gd_scene load_steps=30 format=2]

[ext_resource path="res://menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://menus/Controls/SceneButton.gd" type="Script" id=2]
[ext_resource path="res://assets/faces/face3.png" type="Texture" id=3]
[ext_resource path="res://assets/carpet3.png" type="Texture" id=4]
[ext_resource path="res://assets/Ball.png" type="Texture" id=5]
[ext_resource path="res://assets/Glow.png" type="Texture" id=6]
[ext_resource path="res://menus/OSLabel.gd" type="Script" id=7]
[ext_resource path="res://assets/faces/face7.png" type="Texture" id=8]
[ext_resource path="res://assets/rocket.png" type="Texture" id=9]
[ext_resource path="res://assets/faces/face4.png" type="Texture" id=10]
[ext_resource path="res://assets/spatula.png" type="Texture" id=11]
[ext_resource path="res://assets/taoc_arrow1.png" type="Texture" id=12]
[ext_resource path="res://assets/faces/face6.png" type="Texture" id=13]
[ext_resource path="res://assets/fonts/Roboto-Bold.tres" type="DynamicFont" id=14]

[sub_resource type="DynamicFontData" id=16]
font_path = "res://assets/fonts/No Virus.ttf"

[sub_resource type="DynamicFont" id=17]
font_data = SubResource( 16 )

[sub_resource type="Theme" id=1]
default_font = SubResource( 17 )

[sub_resource type="DynamicFontData" id=18]
font_path = "res://assets/fonts/No Virus.otf"

[sub_resource type="DynamicFont" id=19]
size = 150
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 18 )

[sub_resource type="DynamicFontData" id=20]
font_path = "res://assets/fonts/No Virus.ttf"

[sub_resource type="DynamicFont" id=21]
size = 64
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 20 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="Theme" id=11]
Button/colors/font_color = Color( 0.984314, 0.815686, 0.65098, 1 )
Button/colors/font_color_focus = Color( 0.964706, 0.454902, 0.113725, 1 )
Button/colors/font_color_hover = Color( 1, 0.654902, 0, 1 )
Button/colors/font_color_pressed = Color( 0.964844, 0.656577, 0.395737, 1 )
Button/fonts/font = SubResource( 21 )
Button/styles/disabled = SubResource( 6 )
Button/styles/focus = SubResource( 7 )
Button/styles/hover = SubResource( 8 )
Button/styles/normal = SubResource( 9 )
Button/styles/pressed = SubResource( 10 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://assets/fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=15]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 12 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.286275 )

[node name="Graphics" type="Node2D" parent="."]

[node name="Ball" type="Node2D" parent="Graphics"]
modulate = Color( 0.984314, 0.815686, 0.654902, 1 )
position = Vector2( 603, 606 )
scale = Vector2( 2, 2 )

[node name="Glow" type="Sprite" parent="Graphics/Ball"]
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="Graphics/Ball"]
z_index = 1
texture = ExtResource( 5 )

[node name="Face" type="Sprite" parent="Graphics/Ball"]
z_index = 1
texture = ExtResource( 3 )

[node name="Ball2" type="Node2D" parent="Graphics"]
modulate = Color( 0.980392, 0.709804, 0.760784, 1 )
position = Vector2( 208, 787 )
scale = Vector2( 2, 2 )

[node name="Glow2" type="Sprite" parent="Graphics/Ball2"]
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Graphics/Ball2"]
z_index = 1
texture = ExtResource( 5 )

[node name="Face" type="Sprite" parent="Graphics/Ball2"]
scale = Vector2( -1, 1 )
z_index = 1
texture = ExtResource( 13 )

[node name="Ball3" type="Node2D" parent="Graphics"]
modulate = Color( 0.694118, 0.65098, 0.819608, 1 )
position = Vector2( 457, 808 )
scale = Vector2( 2, 2 )

[node name="Glow3" type="Sprite" parent="Graphics/Ball3"]
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Graphics/Ball3"]
z_index = 1
texture = ExtResource( 5 )

[node name="Face" type="Sprite" parent="Graphics/Ball3"]
scale = Vector2( -1, 1 )
z_index = 1
texture = ExtResource( 8 )

[node name="Ball4" type="Node2D" parent="Graphics"]
modulate = Color( 0.615686, 0.843137, 0.788235, 1 )
position = Vector2( 352, 585 )
scale = Vector2( 2, 2 )

[node name="Glow4" type="Sprite" parent="Graphics/Ball4"]
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Graphics/Ball4"]
z_index = 1
texture = ExtResource( 5 )

[node name="Face" type="Sprite" parent="Graphics/Ball4"]
z_index = 1
texture = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="Graphics"]
position = Vector2( 1614, 134 )
rotation = 0.992795
scale = Vector2( 0.278409, 0.245351 )
texture = ExtResource( 9 )

[node name="Sprite5" type="Sprite" parent="Graphics"]
position = Vector2( 1806, 986 )
rotation = 1.73671
scale = Vector2( 0.278409, 0.245351 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="Graphics"]
position = Vector2( 107, 95.0001 )
rotation = -0.482401
scale = Vector2( 0.278409, 0.245351 )
texture = ExtResource( 11 )

[node name="Sprite6" type="Sprite" parent="Graphics"]
position = Vector2( 1276, 987 )
rotation = 1.87619
scale = Vector2( 0.278409, 0.245351 )
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="Graphics"]
position = Vector2( 711, -4.99997 )
rotation = 0.498829
scale = Vector2( 0.278409, 0.245351 )
texture = ExtResource( 12 )

[node name="Sprite4" type="Sprite" parent="Graphics"]
position = Vector2( 1368, 481 )
rotation = 1.31391
scale = Vector2( 0.278409, 0.245351 )
texture = ExtResource( 12 )

[node name="Title" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 300.0

[node name="TitleText" type="Label" parent="Title"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 99.0
margin_bottom = 99.0
custom_colors/font_color = Color( 0.937255, 0.92549, 0.713726, 1 )
custom_fonts/font = SubResource( 19 )
text = "<Protect Your Balls>"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 187.0
margin_top = 41.0
margin_right = 583.0
margin_bottom = 415.0
theme = SubResource( 11 )

[node name="StartButton" type="Button" parent="Buttons"]
margin_right = 396.0
margin_bottom = 65.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Play Game"
script = ExtResource( 2 )
scene_to_load = "res://Level.tscn"
load_type = 1

[node name="OptionsButton" type="Button" parent="Buttons"]
margin_top = 69.0
margin_right = 396.0
margin_bottom = 134.0
text = "Options"
script = ExtResource( 2 )
scene_to_load = "res://menus/OptionsMenu.tscn"
load_type = 2

[node name="HowToPlayButton" type="Button" parent="Buttons"]
margin_top = 138.0
margin_right = 396.0
margin_bottom = 203.0
text = "How To Play"
script = ExtResource( 2 )
scene_to_load = "res://menus/HowToPlay.tscn"
load_type = 2

[node name="CreditsButton" type="Button" parent="Buttons"]
margin_top = 207.0
margin_right = 396.0
margin_bottom = 272.0
text = "Credits"
script = ExtResource( 2 )
scene_to_load = "res://menus/CreditsMenu.tscn"
load_type = 2

[node name="QuitButton" type="Button" parent="Buttons"]
margin_top = 276.0
margin_right = 396.0
margin_bottom = 341.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="OSLabel" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -76.0
margin_right = 326.0
custom_fonts/font = SubResource( 15 )
text = " OS_VALUE"
script = ExtResource( 7 )

[node name="Scores" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 654.0
margin_top = -210.0
margin_right = 954.0
margin_bottom = 394.0

[node name="BestScore" type="VBoxContainer" parent="Scores"]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )

[node name="Label" type="Label" parent="Scores/BestScore"]
margin_right = 300.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 14 )
text = "Best Score:"
align = 1

[node name="Time" type="Label" parent="Scores/BestScore"]
margin_top = 64.0
margin_right = 300.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 14 )
text = "00:00:00"
align = 1

[node name="Points" type="Label" parent="Scores/BestScore"]
margin_top = 128.0
margin_right = 300.0
margin_bottom = 188.0
custom_colors/font_color = Color( 0.988235, 0.737255, 0.305882, 1 )
custom_fonts/font = ExtResource( 14 )
text = "000000"
align = 1

[node name="BestTime" type="VBoxContainer" parent="Scores"]
margin_top = 304.0
margin_right = 300.0
margin_bottom = 604.0
rect_min_size = Vector2( 300, 300 )

[node name="Label" type="Label" parent="Scores/BestTime"]
margin_right = 300.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 14 )
text = "Best Time:"
align = 1

[node name="Time" type="Label" parent="Scores/BestTime"]
margin_top = 64.0
margin_right = 300.0
margin_bottom = 124.0
custom_colors/font_color = Color( 0.988235, 0.737255, 0.305882, 1 )
custom_fonts/font = ExtResource( 14 )
text = "00:00:00"
align = 1

[node name="Points" type="Label" parent="Scores/BestTime"]
margin_top = 128.0
margin_right = 300.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 14 )
text = "000000"
align = 1

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/OptionsButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/HowToPlayButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/CreditsButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
